--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "jv",
   "license": "ISC",
+  "scripts": {
+    "dev": "next -p 7777",
+    "build": "next build",
+    "start": "next start -p 7777",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
+    "graphql": "^15.5.1",
     "next": "^11.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.16",
+    "@types/react-dom": "^17.0.9",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
